--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React Redux App</title>
+    <title>세모논다 : 세상의 모든 논쟁을 다룬다</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
